add run project by name endpoint
